# Scop

./: .gitignore  CMakeLists.txt  Makefile  README.md
dependencies/glad/: glad.c  glad.h
includes/: color.h  color.hpp  config.hpp
includes/classes/: Matrices.cpp  Matrices.hpp  Matrixes.cpp  Matrixes.hpp  OBJ.cpp  OBJ.hpp  OBJ_parsers.cpp  Shader.cpp  Shader.hpp
objects/: cat.mtl  cube.mtl  skull.mtl  tree.mtl
srcs/: events.cpp  flags.cpp  main.cpp  routine.cpp  shader.cpp  utils.cpp  window.cpp
srcs/shaders/: fragment.frag
srcs/shaders/Black&White/: fragment.frag  vertex.vert
srcs/shaders/Deuteranopia/: fragment.frag
srcs/shaders/Protanopia/: fragment.frag
srcs/shaders/Standard/: fragment.frag  vertex.vert
srcs/shaders/Tritanopia/: fragment.frag  vertex.vert
